// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`base selectors > base selectors 1`] = `
"/* layer: default */
.styled-transition{animation-delay:var(--st-transition-delay, 0);animation-duration:var(--st-transition-duration, 2.5s);animation-fill-mode:both;animation-timing-function:var(--st-transition-easing, cubic-bezier(0.25, 1, 0.3, 1));will-change:clip-path;}"
`;

exports[`base selectors > base selectors with prefix 1`] = `
"/* layer: default */
.styled-transition{animation-delay:var(--styled-transitiontransition-delay, 0);animation-duration:var(--styled-transitiontransition-duration, 2.5s);animation-fill-mode:both;animation-timing-function:var(--styled-transitiontransition-easing, cubic-bezier(0.25, 1, 0.3, 1));will-change:clip-path;}"
`;

exports[`default > default preflight 1`] = `
"/* layer: preflights */
:root {
        --st-circle-center-center-out: circle(0%);
        --st-circle-center-center-in: circle(125%);
        --st-circle-hesitate: circle(40%);
        --st-circle-top-left-out: circle(0% at top left);
        --st-circle-top-right-out: circle(0% at top right);
        --st-circle-bottom-right-out: circle(0% at bottom right);
        --st-circle-bottom-left-out: circle(0% at bottom left);
        --st-circle-top-left-in: circle(150% at top left);
        --st-circle-top-right-in: circle(150% at top right);
        --st-circle-bottom-right-in: circle(150% at bottom right);
        --st-circle-bottom-left-in: circle(150% at bottom left);
        --st-wipe-in: inset(0 0 0 0);
        --st-wipe-bottom: inset(100% 0 0 0);
        --st-wipe-left: inset(0 100% 0 0);
        --st-wipe-top: inset(0 0 100% 0);
        --st-wipe-right: inset(0 0 0 100%);
        --st-wipe-top-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-top-right-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-bottom-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-bottom-right-in: polygon(-50% 0%, 200% 0, 0 200%, 0 -50%);
        --st-wipe-top-left-out: polygon(0 0, 0 0, 0 0, 0 50%);
        --st-wipe-top-right-out: polygon(50% -50%, 150% 50%, 150% 50%, 50% -50%);
        --st-wipe-bottom-left-out: polygon(-50% 50%, 50% 150%, 50% 150%, -50% 50%);
        --st-wipe-bottom-right-out: polygon(150% 50%, 150% 50%, 50% 150%, 50% 150%);
        --st-wipe-cinematic-out: inset(100% 0 100% 0);
        --st-wipe-cinematic-mid: inset(10% 0 10% 0);
        --st-square-hesitate: inset(33% 33% 33% 33%);
        --st-square-out: inset(100% 100% 100% 100%);
        --st-square-in: var(--st-wipe-in);
        --st-square-top-left-out: inset(0 100% 100% 0);
        --st-square-top-right-out: inset(0 0 100% 100%);
        --st-square-bottom-left-out: inset(100% 100% 0 0);
        --st-square-bottom-right-out: inset(100% 0 0 100%);
        --st-diamond-center-in: polygon(-50% 50%, 50% -50%, 150% 50%, 50% 150%);
        --st-diamond-center-out: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%);
        --st-diamond-hesitate: polygon(45% 50%, 50% 25%, 55% 50%, 50% 75%);
        --st-opposing-corners-in: polygon(0 0, 0 100%, 100% 100%, 100% 0);
        --st-opposing-corners-out: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
      }
@media (prefers-reduced-motion: reduce), print {
        .styled-transition {
          animation-duration: 1ms !important;
          transition-duration: 1ms !important;
          animation-iteration-count: 1 !important;
        }
      }"
`;

exports[`preset-animate options > customize prefix 1`] = `
"/* layer: preflights */
:root {
        --styled-transitioncircle-center-center-out: circle(0%);
        --styled-transitioncircle-center-center-in: circle(125%);
        --styled-transitioncircle-hesitate: circle(40%);
        --styled-transitioncircle-top-left-out: circle(0% at top left);
        --styled-transitioncircle-top-right-out: circle(0% at top right);
        --styled-transitioncircle-bottom-right-out: circle(0% at bottom right);
        --styled-transitioncircle-bottom-left-out: circle(0% at bottom left);
        --styled-transitioncircle-top-left-in: circle(150% at top left);
        --styled-transitioncircle-top-right-in: circle(150% at top right);
        --styled-transitioncircle-bottom-right-in: circle(150% at bottom right);
        --styled-transitioncircle-bottom-left-in: circle(150% at bottom left);
        --styled-transitionwipe-in: inset(0 0 0 0);
        --styled-transitionwipe-bottom: inset(100% 0 0 0);
        --styled-transitionwipe-left: inset(0 100% 0 0);
        --styled-transitionwipe-top: inset(0 0 100% 0);
        --styled-transitionwipe-right: inset(0 0 0 100%);
        --styled-transitionwipe-top-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --styled-transitionwipe-top-right-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --styled-transitionwipe-bottom-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --styled-transitionwipe-bottom-right-in: polygon(-50% 0%, 200% 0, 0 200%, 0 -50%);
        --styled-transitionwipe-top-left-out: polygon(0 0, 0 0, 0 0, 0 50%);
        --styled-transitionwipe-top-right-out: polygon(50% -50%, 150% 50%, 150% 50%, 50% -50%);
        --styled-transitionwipe-bottom-left-out: polygon(-50% 50%, 50% 150%, 50% 150%, -50% 50%);
        --styled-transitionwipe-bottom-right-out: polygon(150% 50%, 150% 50%, 50% 150%, 50% 150%);
        --styled-transitionwipe-cinematic-out: inset(100% 0 100% 0);
        --styled-transitionwipe-cinematic-mid: inset(10% 0 10% 0);
        --styled-transitionsquare-hesitate: inset(33% 33% 33% 33%);
        --styled-transitionsquare-out: inset(100% 100% 100% 100%);
        --styled-transitionsquare-in: var(--styled-transitionwipe-in);
        --styled-transitionsquare-top-left-out: inset(0 100% 100% 0);
        --styled-transitionsquare-top-right-out: inset(0 0 100% 100%);
        --styled-transitionsquare-bottom-left-out: inset(100% 100% 0 0);
        --styled-transitionsquare-bottom-right-out: inset(100% 0 0 100%);
        --styled-transitiondiamond-center-in: polygon(-50% 50%, 50% -50%, 150% 50%, 50% 150%);
        --styled-transitiondiamond-center-out: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%);
        --styled-transitiondiamond-hesitate: polygon(45% 50%, 50% 25%, 55% 50%, 50% 75%);
        --styled-transitionopposing-corners-in: polygon(0 0, 0 100%, 100% 100%, 100% 0);
        --styled-transitionopposing-corners-out: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
      }
@media (prefers-reduced-motion: reduce), print {
        .styled-transition {
          animation-duration: 1ms !important;
          transition-duration: 1ms !important;
          animation-iteration-count: 1 !important;
        }
      }"
`;

exports[`preset-animate options > disable injectMediaQuery 1`] = `
"/* layer: preflights */
:root {
        --st-circle-center-center-out: circle(0%);
        --st-circle-center-center-in: circle(125%);
        --st-circle-hesitate: circle(40%);
        --st-circle-top-left-out: circle(0% at top left);
        --st-circle-top-right-out: circle(0% at top right);
        --st-circle-bottom-right-out: circle(0% at bottom right);
        --st-circle-bottom-left-out: circle(0% at bottom left);
        --st-circle-top-left-in: circle(150% at top left);
        --st-circle-top-right-in: circle(150% at top right);
        --st-circle-bottom-right-in: circle(150% at bottom right);
        --st-circle-bottom-left-in: circle(150% at bottom left);
        --st-wipe-in: inset(0 0 0 0);
        --st-wipe-bottom: inset(100% 0 0 0);
        --st-wipe-left: inset(0 100% 0 0);
        --st-wipe-top: inset(0 0 100% 0);
        --st-wipe-right: inset(0 0 0 100%);
        --st-wipe-top-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-top-right-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-bottom-left-in: polygon(50% -50%, 150% 50%, 50% 150%, -50% 50%);
        --st-wipe-bottom-right-in: polygon(-50% 0%, 200% 0, 0 200%, 0 -50%);
        --st-wipe-top-left-out: polygon(0 0, 0 0, 0 0, 0 50%);
        --st-wipe-top-right-out: polygon(50% -50%, 150% 50%, 150% 50%, 50% -50%);
        --st-wipe-bottom-left-out: polygon(-50% 50%, 50% 150%, 50% 150%, -50% 50%);
        --st-wipe-bottom-right-out: polygon(150% 50%, 150% 50%, 50% 150%, 50% 150%);
        --st-wipe-cinematic-out: inset(100% 0 100% 0);
        --st-wipe-cinematic-mid: inset(10% 0 10% 0);
        --st-square-hesitate: inset(33% 33% 33% 33%);
        --st-square-out: inset(100% 100% 100% 100%);
        --st-square-in: var(--st-wipe-in);
        --st-square-top-left-out: inset(0 100% 100% 0);
        --st-square-top-right-out: inset(0 0 100% 100%);
        --st-square-bottom-left-out: inset(100% 100% 0 0);
        --st-square-bottom-right-out: inset(100% 0 0 100%);
        --st-diamond-center-in: polygon(-50% 50%, 50% -50%, 150% 50%, 50% 150%);
        --st-diamond-center-out: polygon(50% 50%, 50% 50%, 50% 50%, 50% 50%);
        --st-diamond-hesitate: polygon(45% 50%, 50% 25%, 55% 50%, 50% 75%);
        --st-opposing-corners-in: polygon(0 0, 0 100%, 100% 100%, 100% 0);
        --st-opposing-corners-out: polygon(0 0, 50% 50%, 100% 100%, 50% 50%);
      }"
`;

exports[`transition selectors > transition circleInBottomLeft 1`] = `
"/* layer: default */
@keyframes stCircleInBottomLeft {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-bottom-left-in);
    }
}
.st-circle-in-bottom-left{animation-name: stCircleInBottomLeft;}"
`;

exports[`transition selectors > transition circleInBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInBottomLeft {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-left-in);
    }
}
.styled-transition-circle-in-bottom-left{animation-name: styledTransitionCircleInBottomLeft;}"
`;

exports[`transition selectors > transition circleInBottomRight 1`] = `
"/* layer: default */
@keyframes stCircleInBottomRight {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-bottom-right-in);
    }
}
.st-circle-in-bottom-right{animation-name: stCircleInBottomRight;}"
`;

exports[`transition selectors > transition circleInBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInBottomRight {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-right-in);
    }
}
.styled-transition-circle-in-bottom-right{animation-name: styledTransitionCircleInBottomRight;}"
`;

exports[`transition selectors > transition circleInCenter 1`] = `
"/* layer: default */
@keyframes stCircleInCenter {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-center-center-in);
    }
}
.st-circle-in-center{animation-name: stCircleInCenter;}"
`;

exports[`transition selectors > transition circleInCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInCenter {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
}
.styled-transition-circle-in-center{animation-name: styledTransitionCircleInCenter;}"
`;

exports[`transition selectors > transition circleInHesitate 1`] = `
"/* layer: default */
@keyframes stCircleInHesitate {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    40% {
      clip-path: var(--st-circle-hesitate);
    }
    100% {
      clip-path: var(--st-circle-center-center-in);
    }
}
.st-circle-in-hesitate{animation-name: stCircleInHesitate;}"
`;

exports[`transition selectors > transition circleInHesitate with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInHesitate {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    40% {
      clip-path: var(--styled-transition-circle-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
}
.styled-transition-circle-in-hesitate{animation-name: styledTransitionCircleInHesitate;}"
`;

exports[`transition selectors > transition circleInTopLeft 1`] = `
"/* layer: default */
@keyframes stCircleInTopLeft {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-top-left-in);
    }
}
.st-circle-in-top-left{animation-name: stCircleInTopLeft;}"
`;

exports[`transition selectors > transition circleInTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInTopLeft {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-left-in);
    }
}
.styled-transition-circle-in-top-left{animation-name: styledTransitionCircleInTopLeft;}"
`;

exports[`transition selectors > transition circleInTopRight 1`] = `
"/* layer: default */
@keyframes stCircleInTopRight {
0% {
      clip-path: var(--st-circle-center-center-out);
    }
    100% {
      clip-path: var(--st-circle-top-right-in);
    }
}
.st-circle-in-top-right{animation-name: stCircleInTopRight;}"
`;

exports[`transition selectors > transition circleInTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleInTopRight {
0% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-right-in);
    }
}
.styled-transition-circle-in-top-right{animation-name: styledTransitionCircleInTopRight;}"
`;

exports[`transition selectors > transition circleOutBottomLeft 1`] = `
"/* layer: default */
@keyframes stCircleOutBottomLeft {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-bottom-left-out);
    }
}
.st-circle-out-bottom-left{animation-name: stCircleOutBottomLeft; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutBottomLeft {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-left-out);
    }
}
.styled-transition-circle-out-bottom-left{animation-name: styledTransitionCircleOutBottomLeft; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutBottomRight 1`] = `
"/* layer: default */
@keyframes stCircleOutBottomRight {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-bottom-right-out);
    }
}
.st-circle-out-bottom-right{animation-name: stCircleOutBottomRight; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutBottomRight {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-bottom-right-out);
    }
}
.styled-transition-circle-out-bottom-right{animation-name: styledTransitionCircleOutBottomRight; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutCenter 1`] = `
"/* layer: default */
@keyframes stCircleOutCenter {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-center-center-out);
    }
}
.st-circle-out-center{animation-name: stCircleOutCenter;}"
`;

exports[`transition selectors > transition circleOutCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutCenter {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
}
.styled-transition-circle-out-center{animation-name: styledTransitionCircleOutCenter;}"
`;

exports[`transition selectors > transition circleOutHesitate 1`] = `
"/* layer: default */
@keyframes stCircleOutHesitate {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    40% {
      clip-path: var(--st-circle-hesitate);
    }
    100% {
      clip-path: var(--st-circle-center-center-out);
    }
}
.st-circle-out-hesitate{animation-name: stCircleOutHesitate;}"
`;

exports[`transition selectors > transition circleOutHesitate with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutHesitate {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    40% {
      clip-path: var(--styled-transition-circle-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-circle-center-center-out);
    }
}
.styled-transition-circle-out-hesitate{animation-name: styledTransitionCircleOutHesitate;}"
`;

exports[`transition selectors > transition circleOutTopLeft 1`] = `
"/* layer: default */
@keyframes stCircleOutTopLeft {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-top-left-out);
    }
}
.st-circle-out-top-left{animation-name: stCircleOutTopLeft; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutTopLeft {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-left-out);
    }
}
.styled-transition-circle-out-top-left{animation-name: styledTransitionCircleOutTopLeft; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutTopRight 1`] = `
"/* layer: default */
@keyframes stCircleOutTopRight {
0% {
      clip-path: var(--st-circle-center-center-in);
    }
    100% {
      clip-path: var(--st-circle-top-right-out);
    }
}
.st-circle-out-top-right{animation-name: stCircleOutTopRight; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition circleOutTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionCircleOutTopRight {
0% {
      clip-path: var(--styled-transition-circle-center-center-in);
    }
    100% {
      clip-path: var(--styled-transition-circle-top-right-out);
    }
}
.styled-transition-circle-out-top-right{animation-name: styledTransitionCircleOutTopRight; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondInCenter 1`] = `
"/* layer: default */
@keyframes stDiamondInCenter {
0% {
      clip-path: var(--st-diamond-center-out);
    }
    100% {
      clip-path: var(--st-diamond-center-in);
    }
}
.st-diamond-in-center{animation-name: stDiamondInCenter; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondInCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionDiamondInCenter {
0% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
}
.styled-transition-diamond-in-center{animation-name: styledTransitionDiamondInCenter; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondInDoubleScale 1`] = `
"/* layer: default */
@keyframes stDiamondInDoubleScale {
0% {
      clip-path: var(--st-diamond-center-out);
    }
    40% {
      clip-path: var(--st-diamond-hesitate);
    }
    100% {
      clip-path: var(--st-diamond-center-in);
    }
}
.st-diamond-in-double-scale{animation-name: stDiamondInDoubleScale; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondInDoubleScale with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionDiamondInDoubleScale {
0% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
    40% {
      clip-path: var(--styled-transition-diamond-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
}
.styled-transition-diamond-in-double-scale{animation-name: styledTransitionDiamondInDoubleScale; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondOutCenter 1`] = `
"/* layer: default */
@keyframes stDiamondOutCenter {
0% {
      clip-path: var(--st-diamond-center-in);
    }
    100% {
      clip-path: var(--st-diamond-center-out);
    }
}
.st-diamond-out-center{animation-name: stDiamondOutCenter; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondOutCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionDiamondOutCenter {
0% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
}
.styled-transition-diamond-out-center{animation-name: styledTransitionDiamondOutCenter; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondOutDoubleScale 1`] = `
"/* layer: default */
@keyframes stDiamondOutDoubleScale {
0% {
      clip-path: var(--st-diamond-center-in);
    }
    40% {
      clip-path: var(--st-diamond-hesitate);
    }
    100% {
      clip-path: var(--st-diamond-center-out);
    }
}
.st-diamond-out-double-scale{animation-name: stDiamondOutDoubleScale; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition diamondOutDoubleScale with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionDiamondOutDoubleScale {
0% {
      clip-path: var(--styled-transition-diamond-center-in);
    }
    40% {
      clip-path: var(--styled-transition-diamond-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-diamond-center-out);
    }
}
.styled-transition-diamond-out-double-scale{animation-name: styledTransitionDiamondOutDoubleScale; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition polygonInOpposingCorners 1`] = `
"/* layer: default */
@keyframes stPolygonInOpposingCorners {
0% {
      clip-path: var(--st-opposing-corners-out);
    }
    100% {
      clip-path: var(--st-opposing-corners-in);
    }
}
.st-polygon-in-opposing-corners{animation-name: stPolygonInOpposingCorners; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition polygonInOpposingCorners with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionPolygonInOpposingCorners {
0% {
      clip-path: var(--styled-transition-opposing-corners-out);
    }
    100% {
      clip-path: var(--styled-transition-opposing-corners-in);
    }
}
.styled-transition-polygon-in-opposing-corners{animation-name: styledTransitionPolygonInOpposingCorners; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition polygonOutOpposingCorners 1`] = `
"/* layer: default */
@keyframes stPolygonOutOpposingCorners {
0% {
      clip-path: var(--st-opposing-corners-in);
    }
    100% {
      clip-path: var(--st-opposing-corners-out);
    }
}
.st-polygon-out-opposing-corners{animation-name: stPolygonOutOpposingCorners; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition polygonOutOpposingCorners with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionPolygonOutOpposingCorners {
0% {
      clip-path: var(--styled-transition-opposing-corners-in);
    }
    100% {
      clip-path: var(--styled-transition-opposing-corners-out);
    }
}
.styled-transition-polygon-out-opposing-corners{animation-name: styledTransitionPolygonOutOpposingCorners; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareInBottomLeft 1`] = `
"/* layer: default */
@keyframes stSquareInBottomLeft {
0% {
      clip-path: var(--st-square-top-right-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-bottom-left{animation-name: stSquareInBottomLeft;}"
`;

exports[`transition selectors > transition squareInBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInBottomLeft {
0% {
      clip-path: var(--styled-transition-square-top-right-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-bottom-left{animation-name: styledTransitionSquareInBottomLeft;}"
`;

exports[`transition selectors > transition squareInBottomRight 1`] = `
"/* layer: default */
@keyframes stSquareInBottomRight {
0% {
      clip-path: var(--st-square-top-left-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-bottom-right{animation-name: stSquareInBottomRight;}"
`;

exports[`transition selectors > transition squareInBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInBottomRight {
0% {
      clip-path: var(--styled-transition-square-top-left-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-bottom-right{animation-name: styledTransitionSquareInBottomRight;}"
`;

exports[`transition selectors > transition squareInCenter 1`] = `
"/* layer: default */
@keyframes stSquareInCenter {
0% {
      clip-path: var(--st-square-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-center{animation-name: stSquareInCenter;}"
`;

exports[`transition selectors > transition squareInCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInCenter {
0% {
      clip-path: var(--styled-transition-square-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-center{animation-name: styledTransitionSquareInCenter;}"
`;

exports[`transition selectors > transition squareInHesitate 1`] = `
"/* layer: default */
@keyframes stSquareInHesitate {
0% {
      clip-path: var(--st-square-out);
    }
    40% {
      clip-path: var(--st-square-hesitate);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-hesitate{animation-name: stSquareInHesitate;}"
`;

exports[`transition selectors > transition squareInHesitate with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInHesitate {
0% {
      clip-path: var(--styled-transition-square-out);
    }
    40% {
      clip-path: var(--styled-transition-square-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-hesitate{animation-name: styledTransitionSquareInHesitate;}"
`;

exports[`transition selectors > transition squareInTopLeft 1`] = `
"/* layer: default */
@keyframes stSquareInTopLeft {
0% {
      clip-path: var(--st-square-bottom-right-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-top-left{animation-name: stSquareInTopLeft;}"
`;

exports[`transition selectors > transition squareInTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInTopLeft {
0% {
      clip-path: var(--styled-transition-square-bottom-right-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-top-left{animation-name: styledTransitionSquareInTopLeft;}"
`;

exports[`transition selectors > transition squareInTopRight 1`] = `
"/* layer: default */
@keyframes stSquareInTopRight {
0% {
      clip-path: var(--st-square-bottom-left-out);
    }
    100% {
      clip-path: var(--st-square-in);
    }
}
.st-square-in-top-right{animation-name: stSquareInTopRight;}"
`;

exports[`transition selectors > transition squareInTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareInTopRight {
0% {
      clip-path: var(--styled-transition-square-bottom-left-out);
    }
    100% {
      clip-path: var(--styled-transition-square-in);
    }
}
.styled-transition-square-in-top-right{animation-name: styledTransitionSquareInTopRight;}"
`;

exports[`transition selectors > transition squareOutBottomLeft 1`] = `
"/* layer: default */
@keyframes stSquareOutBottomLeft {
0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-bottom-left-out);
    }
}
.st-square-out-bottom-left{animation-name: stSquareOutBottomLeft; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutBottomLeft {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-bottom-left-out);
    }
}
.styled-transition-square-out-bottom-left{animation-name: styledTransitionSquareOutBottomLeft; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutBottomRight 1`] = `
"/* layer: default */
@keyframes stSquareOutBottomRight {
0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-bottom-right-out);
    }
}
.st-square-out-bottom-right{animation-name: stSquareOutBottomRight; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutBottomRight {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-bottom-right-out);
    }
}
.styled-transition-square-out-bottom-right{animation-name: styledTransitionSquareOutBottomRight; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutCenter 1`] = `
"/* layer: default */
@keyframes stSquareOutCenter {
0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-out);
    }
}
.st-square-out-center{animation-name: stSquareOutCenter;}"
`;

exports[`transition selectors > transition squareOutCenter with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutCenter {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-out);
    }
}
.styled-transition-square-out-center{animation-name: styledTransitionSquareOutCenter;}"
`;

exports[`transition selectors > transition squareOutHesitate 1`] = `
"/* layer: default */
@keyframes stSquareOutHesitate {
0% {
      clip-path: var(--st-square-in);
    }
    40% {
      clip-path: var(--st-square-hesitate);
    }
    100% {
      clip-path: var(--st-square-out);
    }
}
.st-square-out-hesitate{animation-name: stSquareOutHesitate;}"
`;

exports[`transition selectors > transition squareOutHesitate with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutHesitate {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    40% {
      clip-path: var(--styled-transition-square-hesitate);
    }
    100% {
      clip-path: var(--styled-transition-square-out);
    }
}
.styled-transition-square-out-hesitate{animation-name: styledTransitionSquareOutHesitate;}"
`;

exports[`transition selectors > transition squareOutTopLeft 1`] = `
"/* layer: default */
@keyframes stSquareOutTopLeft {
0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-top-left-out);
    }
}
.st-square-out-top-left{animation-name: stSquareOutTopLeft; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutTopLeft {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-top-left-out);
    }
}
.styled-transition-square-out-top-left{animation-name: styledTransitionSquareOutTopLeft; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutTopRight 1`] = `
"/* layer: default */
@keyframes stSquareOutTopRight {
0% {
      clip-path: var(--st-square-in);
    }
    100% {
      clip-path: var(--st-square-top-right-out);
    }
}
.st-square-out-top-right{animation-name: stSquareOutTopRight; --st-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition squareOutTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionSquareOutTopRight {
0% {
      clip-path: var(--styled-transition-square-in);
    }
    100% {
      clip-path: var(--styled-transition-square-top-right-out);
    }
}
.styled-transition-square-out-top-right{animation-name: styledTransitionSquareOutTopRight; --styled-transition-transition-duration: 1.5s;}"
`;

exports[`transition selectors > transition wipeCinematicIn 1`] = `
"/* layer: default */
@keyframes stWipeCinematicIn {
0% {
      clip-path: var(--st-wipe-cinematic-out);
    }
    30%,
    70% {
      clip-path: var(--st-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
}
.st-wipe-cinematic-in{animation-name: stWipeCinematicIn;}"
`;

exports[`transition selectors > transition wipeCinematicIn with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeCinematicIn {
0% {
      clip-path: var(--styled-transition-wipe-cinematic-out);
    }
    30%,
    70% {
      clip-path: var(--styled-transition-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
}
.styled-transition-wipe-cinematic-in{animation-name: styledTransitionWipeCinematicIn;}"
`;

exports[`transition selectors > transition wipeCinematicOut 1`] = `
"/* layer: default */
@keyframes stWipeCinematicOut {
0% {
      clip-path: var(--st-wipe-in);
    }
    30%,
    70% {
      clip-path: var(--st-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--st-wipe-cinematic-out);
    }
}
.st-wipe-cinematic-out{animation-name: stWipeCinematicOut;}"
`;

exports[`transition selectors > transition wipeCinematicOut with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeCinematicOut {
0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    30%,
    70% {
      clip-path: var(--styled-transition-wipe-cinematic-mid);
    }
    100% {
      clip-path: var(--styled-transition-wipe-cinematic-out);
    }
}
.styled-transition-wipe-cinematic-out{animation-name: styledTransitionWipeCinematicOut;}"
`;

exports[`transition selectors > transition wipeInBottom 1`] = `
"/* layer: default */
@keyframes stWipeInBottom {
0% {
      clip-path: var(--st-wipe-bottom);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
}
.st-wipe-in-bottom{animation-name: stWipeInBottom;}"
`;

exports[`transition selectors > transition wipeInBottom with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInBottom {
0% {
      clip-path: var(--styled-transition-wipe-bottom);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
}
.styled-transition-wipe-in-bottom{animation-name: styledTransitionWipeInBottom;}"
`;

exports[`transition selectors > transition wipeInBottomLeft 1`] = `
"/* layer: default */
@keyframes stWipeInBottomLeft {
0% {
      clip-path: var(--st-wipe-top-right-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-left-in);
    }
}
.st-wipe-in-bottom-left{animation-name: stWipeInBottomLeft;}"
`;

exports[`transition selectors > transition wipeInBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInBottomLeft {
0% {
      clip-path: var(--styled-transition-wipe-top-right-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-left-in);
    }
}
.styled-transition-wipe-in-bottom-left{animation-name: styledTransitionWipeInBottomLeft;}"
`;

exports[`transition selectors > transition wipeInBottomRight 1`] = `
"/* layer: default */
@keyframes stWipeInBottomRight {
0% {
      clip-path: var(--st-wipe-top-left-out);
    }
    100% {
      clip-path: var(--st-wipe-bottom-right-in);
    }
}
.st-wipe-in-bottom-right{animation-name: stWipeInBottomRight;}"
`;

exports[`transition selectors > transition wipeInBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInBottomRight {
0% {
      clip-path: var(--styled-transition-wipe-top-left-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-right-in);
    }
}
.styled-transition-wipe-in-bottom-right{animation-name: styledTransitionWipeInBottomRight;}"
`;

exports[`transition selectors > transition wipeInLeft 1`] = `
"/* layer: default */
@keyframes stWipeInLeft {
0% {
      clip-path: var(--st-wipe-right);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
}
.st-wipe-in-left{animation-name: stWipeInLeft;}"
`;

exports[`transition selectors > transition wipeInLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInLeft {
0% {
      clip-path: var(--styled-transition-wipe-right);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
}
.styled-transition-wipe-in-left{animation-name: styledTransitionWipeInLeft;}"
`;

exports[`transition selectors > transition wipeInRight 1`] = `
"/* layer: default */
@keyframes stWipeInRight {
0% {
      clip-path: var(--st-wipe-left);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
}
.st-wipe-in-right{animation-name: stWipeInRight;}"
`;

exports[`transition selectors > transition wipeInRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInRight {
0% {
      clip-path: var(--styled-transition-wipe-left);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
}
.styled-transition-wipe-in-right{animation-name: styledTransitionWipeInRight;}"
`;

exports[`transition selectors > transition wipeInTop 1`] = `
"/* layer: default */
@keyframes stWipeInTop {
0% {
      clip-path: var(--st-wipe-top);
    }
    100% {
      clip-path: var(--st-wipe-in);
    }
}
.st-wipe-in-top{animation-name: stWipeInTop;}"
`;

exports[`transition selectors > transition wipeInTop with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInTop {
0% {
      clip-path: var(--styled-transition-wipe-top);
    }
    100% {
      clip-path: var(--styled-transition-wipe-in);
    }
}
.styled-transition-wipe-in-top{animation-name: styledTransitionWipeInTop;}"
`;

exports[`transition selectors > transition wipeInTopLeft 1`] = `
"/* layer: default */
@keyframes stWipeInTopLeft {
0% {
      clip-path: var(--st-wipe-bottom-right-out);
    }
    100% {
      clip-path: var(--st-wipe-top-left-in);
    }
}
.st-wipe-in-top-left{animation-name: stWipeInTopLeft;}"
`;

exports[`transition selectors > transition wipeInTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInTopLeft {
0% {
      clip-path: var(--styled-transition-wipe-bottom-right-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-left-in);
    }
}
.styled-transition-wipe-in-top-left{animation-name: styledTransitionWipeInTopLeft;}"
`;

exports[`transition selectors > transition wipeInTopRight 1`] = `
"/* layer: default */
@keyframes stWipeInTopRight {
0% {
      clip-path: var(--st-wipe-bottom-left-out);
    }
    100% {
      clip-path: var(--st-wipe-top-right-in);
    }
}
.st-wipe-in-top-right{animation-name: stWipeInTopRight;}"
`;

exports[`transition selectors > transition wipeInTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeInTopRight {
0% {
      clip-path: var(--styled-transition-wipe-bottom-left-out);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-right-in);
    }
}
.styled-transition-wipe-in-top-right{animation-name: styledTransitionWipeInTopRight;}"
`;

exports[`transition selectors > transition wipeOutBottom 1`] = `
"/* layer: default */
@keyframes stWipeOutBottom {
0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom);
    }
}
.st-wipe-out-bottom{animation-name: stWipeOutBottom;}"
`;

exports[`transition selectors > transition wipeOutBottom with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutBottom {
0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom);
    }
}
.styled-transition-wipe-out-bottom{animation-name: styledTransitionWipeOutBottom;}"
`;

exports[`transition selectors > transition wipeOutBottomLeft 1`] = `
"/* layer: default */
@keyframes stWipeOutBottomLeft {
0% {
      clip-path: var(--st-wipe-top-right-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom-left-out);
    }
}
.st-wipe-out-bottom-left{animation-name: stWipeOutBottomLeft;}"
`;

exports[`transition selectors > transition wipeOutBottomLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutBottomLeft {
0% {
      clip-path: var(--styled-transition-wipe-top-right-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-left-out);
    }
}
.styled-transition-wipe-out-bottom-left{animation-name: styledTransitionWipeOutBottomLeft;}"
`;

exports[`transition selectors > transition wipeOutBottomRight 1`] = `
"/* layer: default */
@keyframes stWipeOutBottomRight {
0% {
      clip-path: var(--st-wipe-top-left-in);
    }
    100% {
      clip-path: var(--st-wipe-bottom-right-out);
    }
}
.st-wipe-out-bottom-right{animation-name: stWipeOutBottomRight;}"
`;

exports[`transition selectors > transition wipeOutBottomRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutBottomRight {
0% {
      clip-path: var(--styled-transition-wipe-top-left-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-bottom-right-out);
    }
}
.styled-transition-wipe-out-bottom-right{animation-name: styledTransitionWipeOutBottomRight;}"
`;

exports[`transition selectors > transition wipeOutLeft 1`] = `
"/* layer: default */
@keyframes stWipeOutLeft {
0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-left);
    }
}
.st-wipe-out-left{animation-name: stWipeOutLeft;}"
`;

exports[`transition selectors > transition wipeOutLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutLeft {
0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-left);
    }
}
.styled-transition-wipe-out-left{animation-name: styledTransitionWipeOutLeft;}"
`;

exports[`transition selectors > transition wipeOutRight 1`] = `
"/* layer: default */
@keyframes stWipeOutRight {
0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-right);
    }
}
.st-wipe-out-right{animation-name: stWipeOutRight;}"
`;

exports[`transition selectors > transition wipeOutRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutRight {
0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-right);
    }
}
.styled-transition-wipe-out-right{animation-name: styledTransitionWipeOutRight;}"
`;

exports[`transition selectors > transition wipeOutTop 1`] = `
"/* layer: default */
@keyframes stWipeOutTop {
0% {
      clip-path: var(--st-wipe-in);
    }
    100% {
      clip-path: var(--st-wipe-top);
    }
}
.st-wipe-out-top{animation-name: stWipeOutTop;}"
`;

exports[`transition selectors > transition wipeOutTop with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutTop {
0% {
      clip-path: var(--styled-transition-wipe-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top);
    }
}
.styled-transition-wipe-out-top{animation-name: styledTransitionWipeOutTop;}"
`;

exports[`transition selectors > transition wipeOutTopLeft 1`] = `
"/* layer: default */
@keyframes stWipeOutTopLeft {
0% {
      clip-path: var(--st-wipe-bottom-right-in);
    }
    100% {
      clip-path: var(--st-wipe-top-left-out);
    }
}
.st-wipe-out-top-left{animation-name: stWipeOutTopLeft;}"
`;

exports[`transition selectors > transition wipeOutTopLeft with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutTopLeft {
0% {
      clip-path: var(--styled-transition-wipe-bottom-right-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-left-out);
    }
}
.styled-transition-wipe-out-top-left{animation-name: styledTransitionWipeOutTopLeft;}"
`;

exports[`transition selectors > transition wipeOutTopRight 1`] = `
"/* layer: default */
@keyframes stWipeOutTopRight {
0% {
      clip-path: var(--st-wipe-bottom-left-in);
    }
    100% {
      clip-path: var(--st-wipe-top-right-out);
    }
}
.st-wipe-out-top-right{animation-name: stWipeOutTopRight;}"
`;

exports[`transition selectors > transition wipeOutTopRight with prefix 1`] = `
"/* layer: default */
@keyframes styledTransitionWipeOutTopRight {
0% {
      clip-path: var(--styled-transition-wipe-bottom-left-in);
    }
    100% {
      clip-path: var(--styled-transition-wipe-top-right-out);
    }
}
.styled-transition-wipe-out-top-right{animation-name: styledTransitionWipeOutTopRight;}"
`;
